feat: add basic serve

--- a/app/settings.toml
+++ b/app/settings.toml
@@ -1,7 +1,6 @@
 [default]
 data_dir = "../data"
 
-
 [default.model]
 name = "intfloat/multilingual-e5-small"
 local_path = "../data/models/multilingual-e5-small"
@@ -14,4 +13,32 @@ reload = false
 
 [default.inference]
 batch_size = 1
-device = "cpu"
+
+[default.cors]
+allow_origins = ["*"]
+allow_methods = ["GET", "POST", "OPTIONS"]
+allow_headers = ["*"]
+allow_credentials = true
+
+# Production environment settings
+[production]
+data_dir = "../data"
+
+[production.model]
+name = "intfloat/multilingual-e5-small"
+local_path = "../data/models/multilingual-e5-small"
+max_length = 512
+
+[production.server]
+host = "0.0.0.0"
+port = 8000
+reload = false
+
+[production.inference]
+batch_size = 1
+
+[production.cors]
+allow_origins = ["https://yourdomain.com"]
+allow_methods = ["GET", "POST", "OPTIONS"]
+allow_headers = ["Content-Type", "Authorization"]
+allow_credentials = true
