--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dynaconf>=3.2.4",
-    "fastapi>=0.116.2",
+    "fastapi[standard]>=0.116.2",
     "torch>=2.8.0",
     "transformers>=4.56.1",
     "uvicorn>=0.35.0",
@@ -14,5 +14,6 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "locust>=2.40.5",
     "pytest>=8.4.2",
 ]
